<resources>
    <string name="app_name">EpayCodingChallenge</string>
    <string name="search">Search</string>

    <string name="nothing_found">Sorry, nothing found</string>
    <string name="retry">Retry</string>
    <string name="simple_weather">Simple Weather</string>
    <string name="city_rio_de_janeiro">Rio de Janeiro</string>
    <string name="city_beijing">Beijing</string>
    <string name="city_los_angeles">Los Angeles</string>
    <string name="x_degree_celsius">%.01f&#xb0;</string>
    <string name="x_humidity">%d\%%</string>
    <string name="next_hours">Next hours</string>
    <string name="next_5_days">Next 5 days</string>
    <string name="cancel">Cancel</string>
    <string name="search_here">Search here</string>
    <string name="no_city_found">No City Found</string>

</resources>