<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/action_search"
		android:actionLayout="@layout/action_item_search"
		android:icon="@drawable/ic_search"
		android:title="@android:string/search_go"
		app:showAsAction="ifRoom" />

</menu>