<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="city"
            type="String" />
    </data>

    <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/cardview"
        app:cardBackgroundColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvManufactureName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@{city}"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            tools:text="Dhaka" />
    </com.google.android.material.card.MaterialCardView>
</layout>

